# grid-aware-curtailment-engine

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  instructions.md  pyproject.toml
.github/: copilot-instructions.md
docs/: API.md  ARCHITECTURE.md  FEATURES.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  USER_GUIDE.md
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: Dashboard.tsx  Header.tsx  HelpComponents.tsx  ScenarioSelector.tsx
src/: __init__.py  demo.py
src/api/: __init__.py  database.py  fixtures.py  main.py  routes.py  schemas.py  services.py
src/battery/: __init__.py  degradation.py  physics.py
src/controllers/: __init__.py  naive.py
src/domain/: __init__.py  models.py
src/generators/: __init__.py  generation.py  grid.py  prices.py
src/hybrid/: __init__.py  controller.py
src/metrics/: __init__.py  analyzer.py  kpi.py
src/optimization/: __init__.py  milp.py
src/reporting/: __init__.py  generator.py
src/rl/: __init__.py  agents.py  environment.py  training.py
src/uncertainty/: __init__.py  risk.py  stress_testing.py
src/validation/: __init__.py  assumptions.py
src/visualization/: __init__.py  comparison.py  timeline.py
tests/: __init__.py  conftest.py  test_battery.py  test_controllers.py  test_domain_models.py  test_generators.py  test_hybrid.py  test_metrics.py  test_optimization.py  test_reporting.py  test_rl.py  test_uncertainty.py  test_validation.py  test_visualization.py
